test/corpus/statements.txt
================================================================================
not keyword and call
================================================================================

if (not done) {
    run();
}


--------------------------------------------------------------------------------

(script
  (if_statement
    (parenthesized_expression
      (unary_expression
        (variable_access
          (identifier))))
    (compound_statement
      (expression_statement
        (call_expression
          (reciever
            (variable_access
              (identifier))))))))

================================================================================
@ operator
================================================================================

@object;
--------------------------------------------------------------------------------

(script
  (expression_statement
    (unary_expression
      (variable_access
        (identifier)))))

================================================================================
c-style cast
================================================================================

double(1);

--------------------------------------------------------------------------------

(script
  (expression_statement
    (cast_expression
      (primative_type)
      (number_literal))))
